--- a/src/components/SelectFilter/index.scss
+++ b/src/components/SelectFilter/index.scss
@@ -1,59 +1,70 @@
 .select-filter {
   width: 100%;
+
   .select-filter-item {
     display: flex;
     align-items: center;
     border-bottom: 1px dashed var(--el-border-color-light);
+
     &:last-child {
       border-bottom: none;
     }
+
     .select-filter-item-title {
       margin-top: -2px;
+
       span {
-        font-size: 14px;
         color: var(--el-text-color-regular);
+        font-size: 14px;
         white-space: nowrap;
       }
     }
+
     .select-filter-notData {
       margin: 18px 0;
-      font-size: 14px;
       color: var(--el-text-color-regular);
+      font-size: 14px;
     }
+
     .select-filter-list {
       display: flex;
       flex: 1;
-      padding: 0;
       margin: 13px 0;
+      padding: 0;
+
       li {
         display: flex;
         align-items: center;
-        padding: 5px 15px;
         margin-right: 16px;
-        font-size: 13px;
-        color: var(--el-color-primary);
-        list-style: none;
-        cursor: pointer;
-        background: var(--el-color-primary-light-9);
+        padding: 5px 15px;
         border: 1px solid var(--el-color-primary-light-5);
         border-radius: 32px;
+        color: var(--el-color-primary);
+        font-size: 13px;
+        list-style: none;
+        background: var(--el-color-primary-light-9);
+        cursor: pointer;
+
         &:hover {
-          color: #ffffff;
-          background: var(--el-color-primary);
           border-color: var(--el-color-primary);
+          color: #fff;
+          background: var(--el-color-primary);
           transition: 0.1s;
         }
+
         &.active {
-          font-weight: bold;
-          color: #ffffff;
-          background: var(--el-color-primary);
           border-color: var(--el-color-primary);
+          color: #fff;
+          font-weight: bold;
+          background: var(--el-color-primary);
         }
+
         .el-icon {
           margin-right: 4px;
           font-size: 16px;
           font-weight: bold;
         }
+
         span {
           white-space: nowrap;
         }
