--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -1,67 +1,78 @@
 .login-container {
   height: 100%;
   min-height: 550px;
-  background-color: #eeeeee;
+  background-color: #eee;
   background-image: url("@/assets/images/login_bg.svg");
   background-size: 100% 100%;
   background-size: cover;
+
   .login-box {
     position: relative;
-    box-sizing: border-box;
     display: flex;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
     width: 96.5%;
     height: 94%;
     padding: 0 50px;
-    background-color: rgb(255 255 255 / 80%);
     border-radius: 10px;
+    background-color: rgb(255 255 255 / 80%);
+    box-sizing: border-box;
+
     .dark {
       position: absolute;
       top: 13px;
       right: 18px;
     }
+
     .login-left {
       width: 800px;
       margin-right: 10px;
+
       .login-left-img {
         width: 100%;
         height: 100%;
       }
     }
+
     .login-form {
       width: 420px;
       padding: 50px 40px 45px;
-      background-color: var(--el-bg-color);
       border-radius: 10px;
       box-shadow: rgb(0 0 0 / 10%) 0 2px 10px 2px;
+      background-color: var(--el-bg-color);
+
       .login-logo {
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         margin-bottom: 45px;
+
         .login-icon {
           width: 60px;
           height: 52px;
         }
+
         .logo-text {
-          padding: 0 0 0 25px;
           margin: 0;
+          padding: 0 0 0 25px;
+          color: #34495e;
           font-size: 42px;
           font-weight: bold;
-          color: #34495e;
           white-space: nowrap;
         }
       }
+
       .el-form-item {
         margin-bottom: 40px;
       }
+
       .login-btn {
         display: flex;
         justify-content: space-between;
         width: 100%;
         margin-top: 40px;
         white-space: nowrap;
+
         .el-button {
           width: 185px;
         }
