--- a/src/layouts/components/Main/index.scss
+++ b/src/layouts/components/Main/index.scss
@@ -1,6 +1,6 @@
 .el-main {
   overflow-x: hidden;
-  padding: 10px 12px;
+  padding: 12px;
   background-color: var(--el-bg-color-page);
   box-sizing: border-box;
 }
